# Level_5/Session_1/docs/swagger.yaml
@@ -27,13 +27,19 @@ definitions:
         type: string
     type: object
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 paths:
-  /auth/login:
+  /auth/requestToken:
     post:
       consumes:
       - application/json
-      description: Login user to authorization
+      description: Request Token for Authorization
       parameters:
       - description: body
         in: body
@@ -44,7 +50,7 @@ paths:
       produces:
       - application/json
       responses: {}
-      summary: Login user
+      summary: Request Token user
       tags:
       - Authentication
   /user/:
@@ -65,6 +71,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - ApiKeyAuth: []
       summary: Get All User Data
       tags:
       - User
@@ -82,6 +90,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - ApiKeyAuth: []
       summary: Post User Data
       tags:
       - User
@@ -99,6 +109,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - ApiKeyAuth: []
       summary: Delete User Data
       tags:
       - User
@@ -114,6 +126,8 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - ApiKeyAuth: []
       summary: Get User Data
       tags:
       - User
@@ -136,7 +150,14 @@ paths:
       produces:
       - application/json
       responses: {}
+      security:
+      - ApiKeyAuth: []
       summary: Put User Data
       tags:
       - User
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
